# jellydesktop

./: .gitlab-ci.yml  Cargo.toml  README.org
src/: api.rs  app.rs  main.rs  old_api.rs  old_app.rs  old_ui.rs  ui.rs  util.rs
src/app/: app.rs  config.rs  create_server.rs  error.rs  mod.rs  player.rs  server.rs
src/models/: config.rs  mod.rs  query.rs  session.rs  user.rs
src/ui/: config.rs  create_server.rs  draw.rs  error.rs  help.rs  mod.rs  server.rs
