[package]
name = "jellydesktop"
version = "0.1.0"
authors = ["D3fus <d3fus@ejected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8"
termion = "1.5"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0.106"
serde_json = "1.0.51"
chrono = "0.4.11"
xdg = "^2.1"
hostname = "0.3.1"
